--- a/.env.local.example
+++ b/.env.local.example
@@ -1,42 +1,20 @@
 # BorderlessBits.com Environment Variables
-# Copy this file to .env.local and fill in your actual values
+# Copy this file to .env.local and fill in your values
 
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_NAME=BorderlessBits
+
+# Google Analytics
+NEXT_PUBLIC_GA_MEASUREMENT_ID=
+
+# EmailJS Configuration
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=
+
+# Development
 NODE_ENV=development
 
-# Google Analytics 4
-NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
-
-# EmailJS Configuration (https://www.emailjs.com/)
-NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_xxxxxxx
-NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_xxxxxxx
-NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=xxxxxxxxxx
-# Optional: Auto-reply template ID
-NEXT_PUBLIC_EMAILJS_AUTOREPLY_TEMPLATE_ID=template_xxxxxxx
-
-# reCAPTCHA (Optional - for additional spam protection)
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=xxxxxxxxxx
-
-# Google Site Verification (Optional - for Search Console)
-NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION=xxxxxxxxxx
-
-# Development and Testing
-# Set to true to enable debug logging
-DEBUG=false
-
-# Performance Monitoring
-# Set to true to enable detailed performance logging
-NEXT_PUBLIC_PERFORMANCE_MONITORING=true
-
-# Content Management
-# Path to content directory (relative to project root)
-CONTENT_PATH=content
-
-# Build Configuration
-# Set to true to generate sitemap during build
-GENERATE_SITEMAP=true
-
-# Security Configuration
-# Set to true in production for stricter security headers
-STRICT_SECURITY=false
+# Optional: Vercel Analytics
+NEXT_PUBLIC_VERCEL_ANALYTICS=false
