--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
     - cron: '0 2 * * 0'
 
 env:
-  NODE_VERSION: 18
+  NODE_VERSION: 20
   # Cache key version - increment to invalidate all caches
   CACHE_VERSION: v1
 
@@ -38,7 +38,7 @@ jobs:
           cache-dependency-path: 'package-lock.json'
 
       - name: Cache dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.npm
@@ -70,7 +70,7 @@ jobs:
 
       # Upload test results and coverage
       - name: Upload test artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: test-results
@@ -88,7 +88,7 @@ jobs:
     strategy:
       matrix:
         # Test multiple Node.js versions in development
-        node-version: ${{ github.ref == 'refs/heads/main' && '[18]' || '[18, 20]' }}
+        node-version: ${{ github.ref == 'refs/heads/main' && '[20]' || '[20, 22]' }}
     
     steps:
       - name: Checkout repository
@@ -101,7 +101,7 @@ jobs:
           cache: 'npm'
 
       - name: Cache dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.npm
@@ -146,7 +146,7 @@ jobs:
           sleep 5
           
           # Run Lighthouse
-          lhci autorun --config=.lighthouserc.json || echo "Lighthouse CI failed but continuing..."
+          lhci autorun --config=lighthouserc.json || echo "Lighthouse CI failed but continuing..."
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
         continue-on-error: true
@@ -163,14 +163,14 @@ jobs:
           test -d out/_next && echo "✓ Next.js assets built"
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-files-${{ matrix.node-version }}
           path: out/
           retention-days: 7
 
       - name: Upload bundle analysis
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: bundle-analysis
@@ -199,13 +199,13 @@ jobs:
     
     steps:
       - name: Download build artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: build-files-18
+          name: build-files-20
           path: out/
 
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
         with:
           # Use static site generator mode
           static_site_generator: next
@@ -230,13 +230,13 @@ jobs:
           test -f out/index.html || (echo "ERROR: index.html not found" && exit 1)
 
       - name: Upload to GitHub Pages
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: out/
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
 
   # Post-deployment verification
   verify-deployment:
@@ -331,7 +331,7 @@ jobs:
           echo "Audit results saved to audit-results.json"
 
       - name: Upload security scan results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: security-scan-results
           path: |
@@ -347,7 +347,7 @@ jobs:
     
     steps:
       - name: Delete old workflow runs
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const { data: runs } = await github.rest.actions.listWorkflowRunsForRepo({
