--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -101,8 +101,11 @@ jobs:
       - name: ⚡ Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           
+      - name: 📦 Install dependencies
+        run: npm ci --prefer-offline --no-audit
+        
       - name: 📦 Install Lighthouse CI
         run: npm install -g @lhci/cli@0.12.x
         
@@ -306,7 +309,7 @@ jobs:
       - name: ⚡ Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
           
       - name: 📦 Install dependencies
