--- a/.env.example
+++ b/.env.example
@@ -1,221 +1,30 @@
-# BorderlessBits.com - Environment Variables Template
-# Copy this file to .env.local and fill in your values
+# BorderlessBits.com Environment Variables
+# Copy this file to .env.local for development
+# NEVER commit .env.local or any file with real credentials
 
-# ==========================================
-# BASIC CONFIGURATION
-# ==========================================
+# Google Analytics (Public - Domain Restricted)
+NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
 
-# Site configuration
-NEXT_PUBLIC_SITE_NAME="BorderlessBits"
-NEXT_PUBLIC_SITE_URL="http://localhost:3000"
-NEXT_PUBLIC_SITE_DESCRIPTION="Professional cloud architecture and healthcare software consulting"
+# EmailJS Configuration (Public Keys - Domain Restricted)
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_xxxxxxx
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_xxxxxxx
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=xxxxxxxxxx
 
-# Environment
-NODE_ENV="development"
+# Site Configuration
+NEXT_PUBLIC_SITE_URL=https://borderlessbits.com
+NEXT_PUBLIC_SITE_NAME=BorderlessBits
+NEXT_PUBLIC_SITE_DESCRIPTION=Enterprise Cloud Architecture & Healthcare Software Consulting
 
-# ==========================================
-# ANALYTICS & TRACKING
-# ==========================================
+# Contact Information (Public Business Info)
+NEXT_PUBLIC_CONTACT_EMAIL=richard@borderlessbits.com
+NEXT_PUBLIC_CONTACT_PHONE=(503) 880-8199
+NEXT_PUBLIC_LINKEDIN_URL=https://www.linkedin.com/in/rmosley2
 
-# Google Analytics 4
-# Get your measurement ID from https://analytics.google.com/
-NEXT_PUBLIC_GA_MEASUREMENT_ID=""
+# Feature Flags
+NEXT_PUBLIC_ENABLE_ANALYTICS=true
+NEXT_PUBLIC_ENABLE_CONTACT_FORM=true
+NEXT_PUBLIC_ENABLE_BLOG=true
 
-# Google Tag Manager (optional)
-NEXT_PUBLIC_GTM_ID=""
-
-# ==========================================
-# EMAIL SERVICES
-# ==========================================
-
-# EmailJS Configuration
-# Sign up at https://www.emailjs.com/
-NEXT_PUBLIC_EMAILJS_SERVICE_ID=""
-NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=""
-NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=""
-
-# Alternative: SMTP Configuration (if using custom email service)
-SMTP_HOST=""
-SMTP_PORT=""
-SMTP_USER=""
-SMTP_PASS=""
-SMTP_FROM=""
-
-# ==========================================
-# FORM HANDLING
-# ==========================================
-
-# Netlify Forms (automatically handled when deployed to Netlify)
-NEXT_PUBLIC_NETLIFY_FORMS="true"
-
-# Formspree (alternative form service)
-# Sign up at https://formspree.io/
-NEXT_PUBLIC_FORMSPREE_ID=""
-
-# reCAPTCHA (for spam protection)
-# Get keys from https://www.google.com/recaptcha/
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=""
-RECAPTCHA_SECRET_KEY=""
-
-# ==========================================
-# DEPLOYMENT SECRETS
-# ==========================================
-
-# GitHub (for deployment workflows)
-GITHUB_TOKEN=""
-GITHUB_REPOSITORY=""
-
-# Netlify Deployment
-NETLIFY_AUTH_TOKEN=""
-NETLIFY_SITE_ID=""
-NETLIFY_STAGING_SITE_ID=""
-NETLIFY_PREVIEW_SITE_ID=""
-
-# Vercel Deployment
-VERCEL_TOKEN=""
-VERCEL_ORG_ID=""
-VERCEL_PROJECT_ID=""
-
-# ==========================================
-# MONITORING & ALERTING
-# ==========================================
-
-# Uptime Robot
-# Sign up at https://uptimerobot.com/
-UPTIMEROBOT_API_KEY=""
-
-# Sentry (Error Monitoring)
-# Sign up at https://sentry.io/
-NEXT_PUBLIC_SENTRY_DSN=""
-SENTRY_AUTH_TOKEN=""
-
-# LogRocket (Session Recording)
-# Sign up at https://logrocket.com/
-NEXT_PUBLIC_LOGROCKET_APP_ID=""
-
-# ==========================================
-# PERFORMANCE MONITORING
-# ==========================================
-
-# Lighthouse CI
-# Get token from GitHub App or temporary-public-storage
-LHCI_GITHUB_APP_TOKEN=""
-LHCI_SERVER_BASE_URL=""
-LHCI_TOKEN=""
-
-# Web Vitals Endpoint (optional)
-NEXT_PUBLIC_WEB_VITALS_ENDPOINT=""
-
-# ==========================================
-# SECURITY
-# ==========================================
-
-# Content Security Policy Nonce
-CSP_NONCE=""
-
-# API Keys Encryption
-ENCRYPTION_KEY=""
-
-# Session Secret
-SESSION_SECRET=""
-
-# ==========================================
-# THIRD-PARTY INTEGRATIONS
-# ==========================================
-
-# HubSpot (CRM Integration)
-HUBSPOT_API_KEY=""
-HUBSPOT_PORTAL_ID=""
-
-# Calendly (Appointment Scheduling)
-NEXT_PUBLIC_CALENDLY_URL=""
-
-# Stripe (Payment Processing - if needed)
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
-STRIPE_SECRET_KEY=""
-
-# ==========================================
-# API CONFIGURATIONS
-# ==========================================
-
-# Rate Limiting
-RATE_LIMIT_PER_HOUR="100"
-RATE_LIMIT_PER_DAY="1000"
-
-# API Base URL
-API_BASE_URL="http://localhost:3000/api"
-
-# ==========================================
-# FEATURE FLAGS
-# ==========================================
-
-# Enable/disable features
-NEXT_PUBLIC_FEATURE_BLOG="true"
-NEXT_PUBLIC_FEATURE_CASE_STUDIES="true"
-NEXT_PUBLIC_FEATURE_TESTIMONIALS="true"
-NEXT_PUBLIC_FEATURE_NEWSLETTER="false"
-
-# A/B Testing
-NEXT_PUBLIC_AB_TEST_ENABLED="false"
-
-# ==========================================
-# DEVELOPMENT TOOLS
-# ==========================================
-
-# Debug Mode
-DEBUG="false"
-NEXT_PUBLIC_DEBUG="false"
-
-# Bundle Analyzer
-ANALYZE="false"
-
-# Mock Services (for development)
-USE_MOCK_EMAILJS="false"
-USE_MOCK_ANALYTICS="false"
-
-# ==========================================
-# DOCKER CONFIGURATION
-# ==========================================
-
-# Container configuration
-CONTAINER_PORT="3000"
-CONTAINER_HOST="0.0.0.0"
-
-# Health check endpoint
-HEALTH_CHECK_ENDPOINT="/api/health"
-
-# ==========================================
-# CI/CD CONFIGURATION
-# ==========================================
-
-# Build configuration
-BUILD_OUTPUT_DIR="out"
-BUILD_EXPORT_TRAILING_SLASH="true"
-
-# Deployment targets
-DEPLOY_TO_GITHUB_PAGES="true"
-DEPLOY_TO_NETLIFY="true"
-DEPLOY_TO_VERCEL="false"
-
-# Branch-specific URLs
-STAGING_URL="https://staging.borderlessbits.com"
-PRODUCTION_URL="https://borderlessbits.com"
-
-# ==========================================
-# PERFORMANCE BUDGETS
-# ==========================================
-
-# Bundle size limits (in KB)
-BUNDLE_SIZE_LIMIT="2048"
-INITIAL_BUNDLE_LIMIT="512"
-
-# Performance thresholds
-LIGHTHOUSE_PERFORMANCE_BUDGET="80"
-LIGHTHOUSE_ACCESSIBILITY_BUDGET="95"
-LIGHTHOUSE_SEO_BUDGET="95"
-
-# Core Web Vitals targets
-TARGET_FCP="1500"  # First Contentful Paint (ms)
-TARGET_LCP="2500"  # Largest Contentful Paint (ms)
-TARGET_CLS="0.1"   # Cumulative Layout Shift
-TARGET_FID="100"   # First Input Delay (ms)
+# Build Configuration
+NODE_ENV=production
+NEXT_TELEMETRY_DISABLED=1
