--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,29 +15,26 @@
   "rules": {
     // TypeScript specific rules
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-non-null-assertion": "warn",
+    "@typescript-eslint/no-non-null-assertion": "off",
     
     // React/Next.js specific rules
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "react-hooks/exhaustive-deps": "warn",
+    "react/no-unescaped-entities": "off",
     
     // General code quality rules
-    "no-console": ["warn", { "allow": ["warn", "error"] }],
+    "no-console": "off",
     "prefer-const": "error",
     "no-var": "error",
-    "object-shorthand": "error",
+    "object-shorthand": "off",
     "prefer-arrow-callback": "error",
     
     // Import organization
-    "sort-imports": ["error", {
-      "ignoreCase": true,
-      "ignoreDeclarationSort": true,
-      "ignoreMemberSort": false
-    }]
+    "sort-imports": "off"
   },
   "env": {
     "browser": true,
