--- a/package.json
+++ b/package.json
@@ -30,50 +30,53 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "gray-matter": "^4.0.3",
+    "isomorphic-dompurify": "^2.6.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@emailjs/browser": "^3.11.0",
-    "gray-matter": "^4.0.3",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
     "remark-gfm": "^4.0.0",
-    "isomorphic-dompurify": "^2.6.0",
-    "zustand": "^4.4.7",
-    "clsx": "^2.0.0",
-    "date-fns": "^2.30.0",
-    "sharp": "^0.33.1"
+    "remark-html": "^16.0.1",
+    "sharp": "^0.33.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.4",
+    "@playwright/test": "^1.54.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/jest": "^29.5.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "typescript": "^5.3.3",
+    "autoprefixer": "^10.4.16",
+    "cross-env": "^7.0.3",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.1.1",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/forms": "^0.5.7",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "cross-env": "^7.0.3",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "@next/bundle-analyzer": "^14.0.4",
     "lighthouse": "^11.3.0",
+    "lint-staged": "^15.2.0",
     "next-sitemap": "^4.2.3",
-    "@playwright/test": "^1.40.0",
-    "playwright-lighthouse": "^4.0.0"
+    "playwright": "^1.54.2",
+    "playwright-core": "^1.54.2",
+    "playwright-lighthouse": "^4.0.0",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3",
+    "ua-parser-js": "^2.0.4"
   },
   "engines": {
     "node": ">=18.0.0",
