--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: 🚀 Continuous Integration
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
   workflow_dispatch:
   schedule:
     # Daily security and dependency checks at 3 AM UTC
@@ -25,38 +25,38 @@ jobs:
   # ==========================================
   # QUALITY GATES - Parallel execution for speed
   # ==========================================
-  
+
   quality-gates:
     name: 🔍 Quality Gates
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    
+
     strategy:
       fail-fast: false
       matrix:
         check: [lint, type-check, format-check]
-    
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: ⚡ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📦 Install dependencies
         run: npm ci --prefer-offline --no-audit
-        
+
       - name: 🔍 ESLint
         if: matrix.check == 'lint'
         run: npm run lint
-        
+
       - name: 📝 TypeScript check
         if: matrix.check == 'type-check'
         run: npm run type-check
-        
+
       - name: 🎨 Format check
         if: matrix.check == 'format-check'
         run: npm run format:check
@@ -64,55 +64,55 @@ jobs:
   # ==========================================
   # SECURITY AUDIT
   # ==========================================
-  
+
   security-audit:
     name: 🛡️ Security Audit
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: ⚡ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📦 Install dependencies
         run: npm ci --prefer-offline --no-audit
-        
+
       - name: 🔒 NPM Audit
         run: npm audit --audit-level moderate
         continue-on-error: true
-        
+
       - name: 🔍 CodeQL Analysis
         uses: github/codeql-action/init@v3
         with:
           languages: javascript
-          
+
       - name: 🏗️ Autobuild
         uses: github/codeql-action/autobuild@v3
-        
+
       - name: 📊 Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
-          category: "/language:javascript"
+          category: '/language:javascript'
 
   # ==========================================
   # DEPENDENCY VULNERABILITY SCAN
   # ==========================================
-  
+
   dependency-scan:
     name: 📦 Dependency Scan
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 🔍 Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
@@ -120,7 +120,7 @@ jobs:
           scan-ref: '.'
           format: 'sarif'
           output: 'trivy-results.sarif'
-          
+
       - name: 📤 Upload Trivy scan results
         uses: github/codeql-action/upload-sarif@v3
         if: always()
@@ -130,29 +130,29 @@ jobs:
   # ==========================================
   # UNIT & INTEGRATION TESTS
   # ==========================================
-  
+
   tests:
     name: 🧪 Tests
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: ⚡ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📦 Install dependencies
         run: npm ci --prefer-offline --no-audit
-        
+
       - name: 🧪 Run tests with coverage
         run: npm run test:coverage
         continue-on-error: true
-        
+
       - name: 📊 Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
@@ -164,36 +164,36 @@ jobs:
   # ==========================================
   # BUILD & BUNDLE ANALYSIS
   # ==========================================
-  
+
   build:
     name: 🏗️ Build & Bundle Analysis
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs: [quality-gates, tests]
-    
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: ⚡ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📦 Install dependencies
         run: npm ci --prefer-offline --no-audit
-        
+
       - name: 🏗️ Build application
         run: npm run build
         env:
           NODE_ENV: production
-          
+
       - name: 📊 Bundle size analysis
         run: npm run analyze
         env:
           ANALYZE: true
-          
+
       - name: 📦 Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -206,40 +206,40 @@ jobs:
   # ==========================================
   # LIGHTHOUSE PERFORMANCE AUDIT
   # ==========================================
-  
+
   lighthouse:
     name: 💡 Lighthouse Audit
     runs-on: ubuntu-latest
     timeout-minutes: 15
     needs: [build]
     if: github.event_name == 'pull_request'
-    
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: ⚡ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📦 Install dependencies
         run: npm ci --prefer-offline --no-audit
-        
+
       - name: 📥 Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-${{ github.sha }}
-          
+
       - name: 🖥️ Serve static files
         run: npx serve out -l 3000 &
-        
+
       - name: ⏳ Wait for server
         run: |
           npm install -g wait-on
           wait-on http://localhost:3000 --timeout 60000
-        
+
       - name: 💡 Run Lighthouse CI
         run: |
           npm install -g @lhci/cli@0.12.x
@@ -250,13 +250,13 @@ jobs:
   # ==========================================
   # INTEGRATION STATUS
   # ==========================================
-  
+
   ci-status:
     name: ✅ CI Status
     runs-on: ubuntu-latest
     needs: [quality-gates, security-audit, dependency-scan, tests, build]
     if: always()
-    
+
     steps:
       - name: ✅ All checks passed
         if: ${{ needs.quality-gates.result == 'success' && needs.security-audit.result == 'success' && needs.dependency-scan.result == 'success' && needs.tests.result == 'success' && needs.build.result == 'success' }}
@@ -267,7 +267,7 @@ jobs:
           echo "📦 Dependency scan: PASSED"
           echo "🧪 Tests: PASSED"
           echo "🏗️ Build: PASSED"
-          
+
       - name: ❌ Some checks failed
         if: ${{ needs.quality-gates.result != 'success' || needs.security-audit.result != 'success' || needs.dependency-scan.result != 'success' || needs.tests.result != 'success' || needs.build.result != 'success' }}
         run: |
@@ -282,17 +282,17 @@ jobs:
   # ==========================================
   # CACHE MANAGEMENT
   # ==========================================
-  
+
   cleanup:
     name: 🧹 Cleanup
     runs-on: ubuntu-latest
     needs: [ci-status]
     if: always() && github.event_name == 'schedule'
-    
+
     steps:
       - name: 🗑️ Clear npm cache
         run: npm cache clean --force
-        
+
       - name: 📦 Delete old artifacts
         uses: actions/github-script@v7
         with:
@@ -301,12 +301,12 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
             });
-            
+
             const oldArtifacts = artifacts.data.artifacts.filter(artifact => {
               const daysSinceCreated = (Date.now() - new Date(artifact.created_at)) / (1000 * 60 * 60 * 24);
               return daysSinceCreated > 7;
             });
-            
+
             for (const artifact of oldArtifacts) {
               await github.rest.actions.deleteArtifact({
                 owner: context.repo.owner,
