--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -2,10 +2,7 @@
   "ci": {
     "collect": {
       "numberOfRuns": 3,
-      "url": [
-        "http://localhost:3001/",
-        "http://localhost:3001/contact/"
-      ],
+      "url": ["http://localhost:3001/", "http://localhost:3001/contact/"],
       "settings": {
         "chromeFlags": "--no-sandbox --headless --disable-gpu --disable-dev-shm-usage",
         "preset": "desktop",
@@ -22,29 +19,29 @@
     "assert": {
       "preset": "lighthouse:recommended",
       "assertions": {
-        "categories:performance": ["error", {"minScore": 0.9}],
-        "categories:accessibility": ["error", {"minScore": 0.9}],
-        "categories:best-practices": ["error", {"minScore": 0.9}],
-        "categories:seo": ["error", {"minScore": 0.9}],
+        "categories:performance": ["error", { "minScore": 0.9 }],
+        "categories:accessibility": ["error", { "minScore": 0.9 }],
+        "categories:best-practices": ["error", { "minScore": 0.9 }],
+        "categories:seo": ["error", { "minScore": 0.9 }],
         "categories:pwa": "off",
-        
-        "first-contentful-paint": ["error", {"maxNumericValue": 2000}],
-        "largest-contentful-paint": ["error", {"maxNumericValue": 2500}],
-        "cumulative-layout-shift": ["error", {"maxNumericValue": 0.1}],
-        "total-blocking-time": ["error", {"maxNumericValue": 300}],
-        
+
+        "first-contentful-paint": ["error", { "maxNumericValue": 2000 }],
+        "largest-contentful-paint": ["error", { "maxNumericValue": 2500 }],
+        "cumulative-layout-shift": ["error", { "maxNumericValue": 0.1 }],
+        "total-blocking-time": ["error", { "maxNumericValue": 300 }],
+
         "viewport": "error",
         "document-title": "error",
         "meta-description": "error",
         "http-status-code": "error",
         "crawlable-anchors": "error",
         "robots-txt": "error",
-        
+
         "color-contrast": "error",
         "image-alt": "error",
         "label": "error",
         "valid-lang": "error",
-        
+
         "uses-https": "error",
         "no-vulnerable-libraries": "error",
         "csp-xss": "warn"
