--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@next/bundle-analyzer": "^14.0.4",
     "@playwright/test": "^1.54.2",
     "@tailwindcss/forms": "^0.5.7",
