--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --passWithNoTests",
+    "test:e2e": "playwright test --project=chromium",
+    "test:e2e:all": "playwright test",
+    "test:e2e:headed": "playwright test --headed --project=chromium",
     "analyze": "cross-env ANALYZE=true next build",
     "lighthouse": "lighthouse http://localhost:3000 --view --chrome-flags=\"--no-sandbox\"",
     "lighthouse:ci": "lhci autorun",
