fixed playwrite tests

--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
     "test": "jest --passWithNoTests",
+    "test:unit": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --passWithNoTests",
     "test:e2e": "playwright test --project=chromium",
     "test:e2e:all": "playwright test",
     "test:e2e:headed": "playwright test --headed --project=chromium",
+    "test:all": "npm run test:unit && npm run test:e2e:all",
     "analyze": "cross-env ANALYZE=true next build",
     "lighthouse": "lighthouse http://localhost:3000 --view --chrome-flags=\"--no-sandbox\"",
     "lighthouse:ci": "lhci autorun",
     "prepare": "husky install",
     "validate": "node scripts/validate.js",
-    "validate-build": "npm run validate && npm run type-check && npm run lint && npm run test && npm run build",
+    "validate-build": "npm run validate && npm run type-check && npm run lint && npm run test:unit && npm run build",
     "clean": "rm -rf .next out node_modules/.cache",
     "setup": "npm install && cp .env.local.example .env.local",
     "preview": "npm run build && npx serve out",
